--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,14 @@
 language: ruby
+cache: bundler
+
 rvm:
   - 2.1.3
+
+script: 'bundle exec rake'
+
+notifications:
+  email:
+    recipients:
+      - hughbrace@gmail.com
+    on_failure: change
+    on_success: never
